# init-project

./: CMakeLists.txt  README.md  config.yaml
src/: create.cpp  main.cpp  read_config.cpp  read_config.h  utils.cpp
src/include/: create.h  read_config.h  utils.h
